apps/base/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  annotations:
    external-dns.kubernetes.io/target: n8n.${DOMAIN}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,web
    traefik.ingress.kubernetes.io/router.middlewares: auth-oauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-service
                port:
                  number: 80
  tls:
    - secretName: traefik-cert-prod
      hosts:
        - n8n.${DOMAIN}
